welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:19: error: not found: value droit
		avance(); avance(); avance(); avance(); avance(); droit();
                                                                  ^